--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-server": "^19.0.0",
     "@angular/router": "^19.0.0",
     "@angular/ssr": "^19.0.6",
+    "@mercadopago/sdk-js": "^0.0.3",
     "angularx-qrcode": "^19.0.0",
     "chart.js": "^4.4.7",
     "express": "^4.18.2",
