--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "jwt-decode": "^4.0.0",
     "ng2-charts": "^8.0.0",
     "ngx-mask": "^19.0.6",
+    "primeicons": "^7.0.0",
+    "primeng": "^19.1.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
