--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^19.0.0",
     "@angular/ssr": "^19.0.6",
     "@mercadopago/sdk-js": "^0.0.3",
+    "@stomp/stompjs": "^7.1.1",
     "angularx-qrcode": "^19.0.0",
     "chart.js": "^4.4.7",
     "express": "^4.18.2",
@@ -32,6 +33,7 @@
     "primeicons": "^7.0.0",
     "primeng": "^19.1.3",
     "rxjs": "~7.8.0",
+    "sockjs-client": "^1.6.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
@@ -43,6 +45,7 @@
     "@types/jasmine": "~5.1.0",
     "@types/mercadopago-sdk-js": "^2.0.17",
     "@types/node": "^18.18.0",
+    "@types/sockjs-client": "^1.5.4",
     "jasmine-core": "~5.4.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
