--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@mercadopago/sdk-js": "^0.0.3",
     "@stomp/stompjs": "^7.1.1",
     "angularx-qrcode": "^19.0.0",
+    "buffer": "^6.0.3",
     "chart.js": "^4.4.7",
     "express": "^4.18.2",
     "jwt-decode": "^4.0.0",
@@ -32,6 +33,7 @@
     "ngx-mask": "^19.0.6",
     "primeicons": "^7.0.0",
     "primeng": "^19.1.3",
+    "process": "^0.11.10",
     "rxjs": "~7.8.0",
     "sockjs-client": "^1.6.1",
     "tslib": "^2.3.0",
