--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@angular/ssr": "^19.0.6",
     "@mercadopago/sdk-js": "^0.0.3",
     "@stomp/stompjs": "^7.1.1",
+    "@stripe/stripe-js": "^7.3.0",
     "angularx-qrcode": "^19.0.0",
+    "asaas-sdk": "^1.2.7",
     "buffer": "^6.0.3",
     "chart.js": "^4.4.7",
     "express": "^4.18.2",
