--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "primeicons": "^7.0.0",
     "primeng": "^19.1.3",
     "process": "^0.11.10",
+    "qrcode": "^1.5.4",
     "rxjs": "~7.8.0",
     "sockjs-client": "^1.6.1",
     "tslib": "^2.3.0",
@@ -49,6 +50,7 @@
     "@types/jasmine": "~5.1.0",
     "@types/mercadopago-sdk-js": "^2.0.17",
     "@types/node": "^18.18.0",
+    "@types/qrcode": "^1.5.5",
     "@types/sockjs-client": "^1.5.4",
     "jasmine-core": "~5.4.0",
     "karma": "~6.4.0",
