--- a/render.yaml
+++ b/render.yaml
@@ -6,3 +6,7 @@ services:
     startCommand: npm start
     plan: free
     autoDeploy: true
+
+
+
+# ng build --configuration production --output-hashing=all 
