--- a/angular.json
+++ b/angular.json
@@ -7,7 +7,7 @@
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
-          "style": "scss" 
+          "style": "scss"
         }
       },
       "root": "",
@@ -17,10 +17,9 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "/dist/zapdai",
+            "outputPath": "dist/zapdai",
             "index": "src/index.html",
             "browser": "src/main.ts",
-            "allowedCommonJsDependencies": ["faye-websocket"],
             "polyfills": [
               "zone.js"
             ],
@@ -37,6 +36,7 @@
             ],
             "scripts": [],
             "server": "src/main.server.ts",
+            "prerender": true,
             "outputMode": "server",
             "ssr": {
               "entry": "src/server.ts"
@@ -77,6 +77,20 @@
             }
           },
           "defaultConfiguration": "development"
+        },
+        "server": {
+          "builder": "@angular-devkit/build-angular:server",
+          "options": {
+            "outputPath": "dist/zapdai-server",
+            "main": "src/main.server.ts",
+            "tsConfig": "tsconfig.server.json"
+          },
+          "configurations": {
+            "production": {
+              "optimization": true,
+              "sourceMap": false
+            }
+          }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n"
