correcao no servidor angular 3

--- a/angular.json
+++ b/angular.json
@@ -79,7 +79,7 @@
         "server": {
           "builder": "@angular-devkit/build-angular:server",
           "options": {
-            "outputPath": "dist/zapdai-server",
+            "outputPath": "dist/server",
             "main": "src/main.server.ts",
             "tsConfig": "tsconfig.server.json"
           },
