--- a/angular.json
+++ b/angular.json
@@ -36,6 +36,8 @@
             ],
             "scripts": [],
             "server": "src/main.server.ts",
+            "prerender": true,
+            "outputMode": "server",
             "ssr": {
               "entry": "src/server.ts"
             }
@@ -79,7 +81,7 @@
         "server": {
           "builder": "@angular-devkit/build-angular:server",
           "options": {
-            "outputPath": "dist/server",
+            "outputPath": "dist/zapdai-server",
             "main": "src/main.server.ts",
             "tsConfig": "tsconfig.server.json"
           },
