--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "zapdai",
   "version": "0.0.0",
   "scripts": {
-    "ng":"ng",
+    "ng": "ng",
     "start": "ng serve",
     "build": "ng build ",
     "build:ssr": "ng build && ng run zapdai:server",
@@ -33,6 +33,7 @@
     "express": "^4.18.2",
     "jwt-decode": "^4.0.0",
     "ng2-charts": "^8.0.0",
+    "ngx-dropzone": "^3.1.0",
     "ngx-mask": "^19.0.6",
     "primeicons": "^7.0.0",
     "primeng": "^19.1.3",
