--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jwt-decode": "^4.0.0",
     "ng2-charts": "^8.0.0",
     "ngx-dropzone": "^3.1.0",
+    "ngx-image-compress": "^18.1.5",
     "ngx-mask": "^19.0.6",
     "primeicons": "^7.0.0",
     "primeng": "^19.1.3",
@@ -60,6 +61,6 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.6.2"
+    "typescript": "^5.8.3"
   }
 }
