--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "ngx-dropzone": "^3.1.0",
     "ngx-image-compress": "^18.1.5",
     "ngx-mask": "^19.0.6",
+    "ngx-otp-input": "^1.1.4",
     "primeicons": "^7.0.0",
     "primeng": "^19.1.3",
     "process": "^0.11.10",
