--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^19.0.0",
+    "@angular/cdk": "^19.2.19",
     "@angular/common": "^19.0.0",
     "@angular/compiler": "^19.0.0",
     "@angular/core": "^19.0.0",
@@ -32,7 +33,7 @@
     "chart.js": "^4.4.7",
     "express": "^4.18.2",
     "jwt-decode": "^4.0.0",
-    "ng2-charts": "^8.0.0",
+    "ng2-charts": "^7.0.0",
     "ngx-dropzone": "^3.1.0",
     "ngx-image-compress": "^18.1.5",
     "ngx-mask": "^19.0.6",
