--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "chart.js": "^4.4.7",
     "express": "^4.18.2",
     "jwt-decode": "^4.0.0",
+    "leaflet": "^1.9.4",
     "ng2-charts": "^7.0.0",
     "ngx-dropzone": "^3.1.0",
     "ngx-image-compress": "^18.1.5",
@@ -53,6 +54,7 @@
     "@angular/compiler-cli": "^19.0.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
+    "@types/leaflet": "^1.9.20",
     "@types/mercadopago-sdk-js": "^2.0.17",
     "@types/node": "^18.18.0",
     "@types/qrcode": "^1.5.5",
