--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/compiler": "^19.0.0",
     "@angular/core": "^19.0.0",
     "@angular/forms": "^19.0.0",
+    "@angular/google-maps": "^19.2.14",
     "@angular/material": "^19.0.5",
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
@@ -53,6 +54,7 @@
     "@angular/cli": "^20.0.5",
     "@angular/compiler-cli": "^19.0.0",
     "@types/express": "^4.17.17",
+    "@types/google.maps": "^3.58.1",
     "@types/jasmine": "~5.1.0",
     "@types/leaflet": "^1.9.20",
     "@types/mercadopago-sdk-js": "^2.0.17",
