--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -10,5 +10,11 @@
   ],
   "angularCompilerOptions": {
     "entryModule": "./src/app/app.server.module#AppServerModule"
-  }
+  },
+  "include": [
+    "src/**/*.d.ts"
+  ],
+  "exclude": [
+    "**/*.spec.ts"
+  ]
 }
